k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-canary
  namespace: model-canary
  labels:
    app.kubernetes.io/name: model-canary
spec:
  type: ClusterIP
  ports:
    - port: 8311
      targetPort: http
      name: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: model-canary
